pt4 fix