@@ -1,8 +1,9 @@
 package com.example.currencyrate.controller;
 
-import com.example.currencyrate.entity.ConversionRate;
-import com.example.currencyrate.entity.Currency;
-import com.example.currencyrate.entity.RateProvider;
+import com.example.currencyrate.controller.dto.CurrencyRateResponse;
+import com.example.currencyrate.controller.dto.CurrencyResponse;
+import com.example.currencyrate.controller.dto.RateProviderResponse;
+import com.example.currencyrate.controller.mapper.CurrencyRateMapper;
 import com.example.currencyrate.service.ExchangeRateService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -11,10 +12,8 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDateTime;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
@@ -23,65 +22,39 @@ import java.util.stream.Collectors;
 public class CurrencyRateController {
 
     private final ExchangeRateService exchangeRateService;
+    private final CurrencyRateMapper mapper;
 
     @GetMapping("/rates")
-    public ResponseEntity<Map<String, Object>> getRate(
+    public ResponseEntity<CurrencyRateResponse> getRate(
             @RequestParam String from,
             @RequestParam String to,
             @RequestParam(required = false)
             @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) LocalDateTime timestamp
     ) {
         log.debug("GET /rates from={} to={} timestamp={}", from, to, timestamp);
-
-        ConversionRate rate = exchangeRateService.getRate(
-                from.toUpperCase(), to.toUpperCase(), timestamp);
-
-        Map<String, Object> response = new LinkedHashMap<>();
-        response.put("fromCurrency", rate.getSourceCode());
-        response.put("toCurrency", rate.getDestinationCode());
-        response.put("rate", rate.getRate());
-        response.put("rateBeginTime", rate.getRateBeginTime());
-        response.put("rateEndTime", rate.getRateEndTime());
-        response.put("providerCode", rate.getProviderCode());
-
-        return ResponseEntity.ok(response);
+        return ResponseEntity.ok(
+                mapper.toResponse(
+                        exchangeRateService.getRate(from.toUpperCase(), to.toUpperCase(), timestamp)
+                )
+        );
     }
 
     @GetMapping("/currencies")
-    public ResponseEntity<List<Map<String, Object>>> getCurrencies() {
-        List<Currency> currencies = exchangeRateService.getActiveCurrencies();
-
-        List<Map<String, Object>> response = currencies.stream()
-                .map(c -> {
-                    Map<String, Object> m = new LinkedHashMap<>();
-                    m.put("code", c.getCode());
-                    m.put("isoCode", c.getIsoCode());
-                    m.put("description", c.getDescription());
-                    m.put("symbol", c.getSymbol());
-                    m.put("active", c.isActive());
-                    return m;
-                })
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(response);
+    public ResponseEntity<List<CurrencyResponse>> getCurrencies() {
+        return ResponseEntity.ok(
+                exchangeRateService.getActiveCurrencies().stream()
+                        .map(mapper::toResponse)
+                        .toList()
+        );
     }
 
     @GetMapping("/rate-providers")
-    public ResponseEntity<List<Map<String, Object>>> getRateProviders() {
-        List<RateProvider> providers = exchangeRateService.getActiveProviders();
-
-        List<Map<String, Object>> response = providers.stream()
-                .map(p -> {
-                    Map<String, Object> m = new LinkedHashMap<>();
-                    m.put("providerCode", p.getProviderCode());
-                    m.put("providerName", p.getProviderName());
-                    m.put("priority", p.getPriority());
-                    m.put("active", p.isActive());
-                    return m;
-                })
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(response);
+    public ResponseEntity<List<RateProviderResponse>> getRateProviders() {
+        return ResponseEntity.ok(
+                exchangeRateService.getActiveProviders().stream()
+                        .map(mapper::toResponse)
+                        .toList()
+        );
     }
 
     @GetMapping("/health")
